--- a/react-app/index.html
+++ b/react-app/index.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/jpeg" href="/main_logo.jpg" />
+    <link rel="mask-icon" href="/main_logo.jpg" 
+ color="#000000">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Восток & Ведение</title>
   </head>
