--- a/react-app/index.html
+++ b/react-app/index.html
@@ -5,6 +5,7 @@
     <link rel="icon" type="image/jpeg" href="/main_logo.jpg" />
     <link rel="mask-icon" href="/main_logo.jpg" 
  color="#000000">
+    <link rel="apple-touch-icon" href="/main_logo.jpg">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Восток & Ведение</title>
   </head>
